[package]
name = "crosspacket_tests"
version = "1.0.0"
edition = "2021"

[features]
default = []
no_json = []
no_msgpack = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# Import the actual generated packets!
crosspacket_generated = { path = "../../generated/rust" }

[[test]]
name = "packets_test"
path = "tests/packets_test.rs"
